--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 	<meta name="google-site-verification" content="MnsV74jni3LkNBCa2BYCERRt5YZyjnAqMlstRH_JKxM" />
 
 	<meta name="description" content="{{ page.excerpt | strip_html | truncatewords: 20 | default: '오늘의 트렌드  정보 블로그' }}">
-	<meta name="keywords" content="{{ page.keywords | default: '트렌드, 트렌드 정보, 키워드, 요리, 외국 요리, 세계 요리, 조리법, 명언, 영단어, 요리 유래' }}">
+	<meta name="keywords" content="{{ page.keyword | default: '트렌드, 트렌드 정보, 키워드, 요리, 외국 요리, 세계 요리, 조리법, 명언, 영단어, 요리 유래' }}">
 	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
