--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,9 +93,14 @@ code {
 }
 
 .content {
-	/*margin-left: 180px;*/
 	flex: 1 1 auto;
 	padding: 0px 30px;
+  justify-content: center;
+  display: flex;
+}
+
+.post {
+  max-width: 1080px;
 }
 
 .sidebar {
