--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,6 +103,12 @@ code {
   max-width: 1080px;
 }
 
+@media screen and (min-width: 768px) {
+  .post {
+    min-width: 1080px;
+  }
+}
+
 .sidebar {
 	/*position: fixed;*/
 	font-family: "BMJUA";
