--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,8 +98,8 @@ code {
 }
 
 .post {
-  max-width: 1080px;
-  width: 50%;
+  max-width: 1200px;
+  width: 60%;
 }
 
 .sidebar {
@@ -107,7 +107,7 @@ code {
 	font-family: "BMJUA";
 	display: flex;
 	flex-flow: column nowrap;
-	flex: 0 0 220px;
+	flex: 0 0 180px;
 	padding: 15px;
 	z-index: 1;
 	background-color: #222;
@@ -218,7 +218,7 @@ article .share .gplus:hover {
 }
 
 article {
-	padding: 0 5% 0;
+	padding: 0 4% 0 1%;
 	font-size: 17px;
 	margin-bottom: 100px;
 	line-height: 1.9;
