--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,6 +97,10 @@ code {
     justify-items: center;
 }
 
+.post {
+	max-width: 1200px;
+}
+
 @media screen and (min-width: 768px) {
 	.post {
 		max-width: 1200px;
