--- a/_includes/post.html
+++ b/_includes/post.html
@@ -12,14 +12,52 @@
 	<div class="post-content">
 		{{ content }}
 	</div>
-	<footer class="post-navigation">
-	    {% if page.previous %}
-	        <a class="prev-post" href="{{ page.previous.url }}"><span class="next-title">{{ page.previous.title }}</span></a>
-	    {% endif %}
-	    {% if page.next %}
-	        <a class="next-post" href="{{ page.next.url }}"><span class="next-title">{{ page.next.title }}</span> </a>
-	    {% endif %}
+	{% assign current_category = page.categories[0] %}
+	{% assign posts_in_category = site.categories[current_category] %}
+	{% assign current_index = nil %}
+	
+	{% for post in posts_in_category %}
+	  {% if post.url == page.url %}
+		{% assign current_index = forloop.index0 %}
+	  {% endif %}
+	{% endfor %}
+	
+	<footer>
+		<div class="post-navigation">
+		{% if current_index != nil %}
+			{% assign prev_index = current_index | minus: 1 %}
+			{% assign next_index = current_index | plus: 1 %}
+		
+			{% if prev_index >= 0 %}
+			<a class="prev-post" href="{{ posts_in_category[prev_index].url }}">
+				<span class="prev-title">{{ posts_in_category[prev_index].title }}</span>
+			</a>
+			{% endif %}
+		
+			{% if next_index < posts_in_category.size %}
+			<a class="next-post" href="{{ posts_in_category[next_index].url }}">
+				<span class="next-title">{{ posts_in_category[next_index].title }}</span>
+			</a>
+			{% endif %}
+		{% endif %}
+		</div>
+		
+		<div class="recent-posts">
+			<h3>최근 게시글</h3>
+			<div class="cards">
+			{% for post in site.posts limit:5 %}
+				<div class="card">
+				<a href="{{ post.url }}">
+					<h4>{{ post.title }}</h4>
+					<p>{{ post.excerpt | strip_html | truncate: 100 }}</p>
+					<small>{{ post.date | date: "%Y-%m-%d" }}</small>
+				</a>
+				</div>
+			{% endfor %}
+			</div>
+		</div>
 	</footer>
+	  
 	
 	<script src="https://utteranc.es/client.js"
         repo="y00913/blog-comments"
