--- a/_includes/post.html
+++ b/_includes/post.html
@@ -25,8 +25,8 @@
 	<footer>
 		<div class="post-navigation">
 		{% if current_index != nil %}
-			{% assign prev_index = current_index | minus: 1 %}
-			{% assign next_index = current_index | plus: 1 %}
+			{% assign prev_index = current_index | plus: 1 %}
+			{% assign next_index = current_index | minus: 1 %}
 		
 			{% if prev_index >= 0 %}
 			<a class="prev-post" href="{{ posts_in_category[prev_index].url }}">
@@ -49,7 +49,6 @@
 				<div class="card">
 				<a href="{{ post.url }}">
 					<h4>{{ post.title }}</h4>
-					<p>{{ post.excerpt | strip_html | truncate: 100 }}</p>
 					<small>{{ post.date | date: "%Y-%m-%d" }}</small>
 				</a>
 				</div>
