--- a/_includes/post.html
+++ b/_includes/post.html
@@ -28,13 +28,13 @@
 			{% assign prev_index = current_index | plus: 1 %}
 			{% assign next_index = current_index | minus: 1 %}
 		
-			{% if prev_index >= 0 %}
+			{% if prev_index < posts_in_category.size %}
 			<a class="prev-post" href="{{ posts_in_category[prev_index].url }}">
 				<span class="prev-title">{{ posts_in_category[prev_index].title }}</span>
 			</a>
 			{% endif %}
 		
-			{% if next_index < posts_in_category.size %}
+			{% if next_index >= 0 %}
 			<a class="next-post" href="{{ posts_in_category[next_index].url }}">
 				<span class="next-title">{{ posts_in_category[next_index].title }}</span>
 			</a>
