--- a/_includes/post.html
+++ b/_includes/post.html
@@ -30,7 +30,7 @@
 		
 			{% if prev_index < posts_in_category.size %}
 			<a class="prev-post" href="{{ posts_in_category[prev_index].url }}">
-				<span class="prev-title">{{ posts_in_category[prev_index].title }}</span>
+				<span class="next-title">{{ posts_in_category[prev_index].title }}</span>
 			</a>
 			{% endif %}
 		
