--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,23 @@
 @import url(syntax/monokai.css);
 @font-face {
-    font-family: 'BMJUA';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+    font-family: 'GMarketSans';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansLight.woff') format('woff');
+    font-weight: 300;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'GMarketSans';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+    font-weight: 500;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'GMarketSans';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('woff');
+    font-weight: 700;
+    font-display: swap;
 }
 
 :root {
@@ -33,8 +47,8 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "BMJUA";
-  --font-family-serif: "BMJUA";
+  --font-family-sans-serif: "GMarketSans";
+  --font-family-serif: "GMarketSans";
 }
 
 * {
@@ -54,6 +68,7 @@ body {
 	margin: 0;
 	padding: 0;
 	color: #2c3e50;
+	font-family: "GMarketSans";
 }
 
 a {
