--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
 @import url(syntax/monokai.css);
 @font-face {
-    font-family: 'BMJUA';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+    font-family: 'NanumSquareNeo';
+    src: url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumSquareNeo/NanumSquareNeoTTF-cBd.woff2);
+    font-weight: 700;
+    font-display: swap;
 }
 
 :root {
@@ -33,8 +33,8 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "BMJUA";
-  --font-family-serif: "BMJUA";
+  --font-family-sans-serif: "NanumSquareNeo";
+  --font-family-serif: "NanumSquareNeo";
 }
 
 * {
@@ -54,7 +54,7 @@ body {
 	margin: 0;
 	padding: 0;
 	color: #2c3e50;
-	font-family: "BMJUA", sans-serif;
+	font-family: "NanumSquareNeo", sans-serif;
 }
 
 a {
@@ -215,7 +215,7 @@ article .share .gplus:hover {
 
 article {
 	padding: 0 5% 0;
-	font-size: 19px;
+	font-size: 16px;
 	margin-bottom: 100px;
 	line-height: 2.3;
 }
@@ -614,7 +614,7 @@ table tbody tr:hover {
 
 .recent-posts .card h4 {
 	margin-top: 0;
-	font-size: 1.1em;
+	font-size: 0.8em;
 	color: #333;
 }
 
