--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -42,7 +42,7 @@
 	  <span id="ellipsis">. . .</span>
 	  <div id="categories-list">
 		{% for category in site.categories %}
-		<li>
+		<li class="nav-list">
 		  <a class="nav-item" href="{{ root_url }}/{{ site.category_dir }}#{{ category | first }}">
 			<span class="name">{{ category | first }}</span>
 			<span class="badge">{{ category | last | size }}</span>
