--- a/public/css/style.css
+++ b/public/css/style.css
@@ -615,11 +615,13 @@ table tbody tr:hover {
 	background-color: #f9f9f9;
 	border-radius: 4px;
 	transition: box-shadow 0.3s ease;
+	text-decoration: none;
 }
 
 .recent-posts .card:hover {
 	box-shadow: 0 2px 8px rgba(0,0,0,0.1);
 	background-color: #ebebeb;
+	text-decoration: none;
 }
 
 .recent-posts .card h4 {
