--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,14 +14,14 @@
 <div class="sidebar-item sidebar-nav">
 	<ul class="nav">
       <li class="nav-title">Pages</li>
-	  <li>
+	  <li class="nav-list">
 	  	<a class="nav-item" href="/">Articles</a>
 	  </li>
 	  {% assign pages_list = site.pages %}
 	  {% for node in pages_list %}
 	    {% if node.title != null %}
 	      {% if node.layout == "page" %}
-	        <li>
+	        <li class="nav-list">
 	        	<a class="nav-item" href="{{ node.url }}">
 	            	{{ node.title }}
 	            </a>
