--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,5 +1,20 @@
 <article class="post">
+	{% assign current_category = page.categories[0] %}
+	{% assign posts_in_category = site.categories[current_category] %}
+	{% assign current_index = nil %}
+	
+	{% for post in posts_in_category %}
+	  {% if post.url == page.url %}
+		{% assign current_index = forloop.index0 %}
+	  {% endif %}
+	{% endfor %}
+
 	<header class="post-header">
+		{% if current_category %}
+			<div class="back-to-category">
+				<a href="/category/#{{ current_category | slugify }}">< 목록으로 돌아가기</a>
+			</div>
+		{% endif %}
 		<div class="post-title"> 
 			{{ page.title | escape }}
 		</div>
@@ -12,17 +27,14 @@
 	<div class="post-content">
 		{{ content }}
 	</div>
-	{% assign current_category = page.categories[0] %}
-	{% assign posts_in_category = site.categories[current_category] %}
-	{% assign current_index = nil %}
-	
-	{% for post in posts_in_category %}
-	  {% if post.url == page.url %}
-		{% assign current_index = forloop.index0 %}
-	  {% endif %}
-	{% endfor %}
 	
 	<footer>
+		{% if current_category %}
+			<div class="back-to-category">
+				<a href="/category/#{{ current_category | slugify }}">< 목록으로 돌아가기</a>
+			</div>
+		{% endif %}
+
 		<div class="post-navigation">
 		{% if current_index != nil %}
 			{% assign prev_index = current_index | plus: 1 %}
