--- a/public/css/style.css
+++ b/public/css/style.css
@@ -678,3 +678,16 @@ table tbody tr:hover {
         width: 100%;
     }
 }
+
+.back-to-category {
+	font-size: 12px;
+	color: #666;
+}
+
+.back-to-category a {
+	color: inherit;
+	text-decoration: none;
+}
+.back-to-category a:hover {
+	text-decoration: underline;
+}
